--- a/local/templates/main/styles.css
+++ b/local/templates/main/styles.css
@@ -1,4 +1,5 @@
-*{
+.swiper-container,
+.swiper-container *{
     user-select: none;
     -webkit-user-select: none;       
     -moz-user-select: none;
