--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -1696,6 +1696,7 @@
 
 .catalog__map-more .object__images {
   margin-bottom: 1.6rem;
+  text-align: center;
 }
 
 .catalog__map-more .object__heading {
