--- a/local/templates/main/assets/css/lk_favorite.css
+++ b/local/templates/main/assets/css/lk_favorite.css
@@ -173,7 +173,8 @@
 
 .object__images {
     margin-bottom: .8rem;
-    position: relative
+    position: relative;
+    text-align: center;
 }
 
 .object__images .swiper-slide {
