--- a/local/templates/main/assets/css/lk_history.css
+++ b/local/templates/main/assets/css/lk_history.css
@@ -614,7 +614,8 @@
 
 .object__images {
     margin-bottom: .8rem;
-    position: relative
+    position: relative;
+    text-align: center;
 }
 
 .object__images .swiper-slide {
