--- a/local/components/naturalist/certificates.index/templates/.default/style.css
+++ b/local/components/naturalist/certificates.index/templates/.default/style.css
@@ -185,6 +185,8 @@
   font-size: 18px;
   font-weight: 500;
   line-height: 21px;
+  font-family: "Lato";
+  margin: 0;
 }
 
 .certificates_index__question {
