--- a/local/templates/main/components/bitrix/news.list/impressions_slider/style.css
+++ b/local/templates/main/components/bitrix/news.list/impressions_slider/style.css
@@ -59,6 +59,14 @@
   background-size: cover;
   overflow: hidden;
   background-repeat: no-repeat;
+  position: relative;
+}
+
+.impressions-slider .list__item-image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
 
 .impressions-slider .list__item-title {
