--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -3034,8 +3034,8 @@
   display: none;
 }
 
-.body__on_map .catalog_map .catalog__objects{
-  display: none;
+.body__on_map .catalog__objects{
+  display: none!important;
 }
 
 .body__on_map .catalog__map-sticky{
@@ -3105,7 +3105,7 @@
 }
 
 .body__on_map .catalog_map .form__row .form__item {
-  max-width: 140px;
+  max-width: 170px;
   border-left: 1px solid var(--color-btn);
 }
 
@@ -3139,7 +3139,7 @@
 }
 
 .body__on_map .catalog_map .form__row.calendar {
-  max-width: 280px;
+  max-width: 340px;
   width: 100%;
 }
 
@@ -3159,7 +3159,8 @@
 }
 
 .body__on_map .catalog_map .field_calendar:before {
-  bottom: 22px;
+  bottom: 24px;
+  right: 12px;
 }
 
 .body__on_map .catalog_map label {
@@ -3191,7 +3192,7 @@
 
 .body__on_map .catalog_map .form_group_wrapper{
   width: 100%;
-  max-width: 787px;
+  max-width: 800px;
 }
 
 .body__on_map .catalog_map .guests__dropdown {
