--- a/local/templates/main/components/bitrix/menu/footer/style.css
+++ b/local/templates/main/components/bitrix/menu/footer/style.css
@@ -46,22 +46,9 @@
 @media (max-width:1023px) {
     .footer__menu .list{
         flex-wrap: wrap;
-        margin-top: -16px;
     }  
 
     .footer__menu .list__item{
-        margin-top: 16px;
-    }
-}
-
-@media (max-width:414px) {
-    .footer__menu .list__item:nth-child(6){
-        margin-right: 0;
-    }
-}
-
-@media (max-width:374px) {
-    .footer__menu .list__item{
-        margin: 16px 12px 0;
+        margin: 0px 12px 12px!important;
     }
 }
