--- a/local/templates/main/assets/css/certpdf.css
+++ b/local/templates/main/assets/css/certpdf.css
@@ -36,7 +36,7 @@
 }
 
 .order-pdf__congrats {
-  font-family: "kindentosca";
+  font-family: "firacode";
   font-size: 24px;
   line-height: 31px;
   text-align: center;
